--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,9 @@
             <ul class="nav navbar-nav">
                 <li><a href="/flower/picture">Webcam</a></li>
             </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="/flower/gif">Time Lapse</a></li>
+            </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if user %}
                     <li><a href="{{ logout_url }}">Logout</a></li>
